--- a/docs/references/nextjs/auth.mdx
+++ b/docs/references/nextjs/auth.mdx
@@ -5,7 +5,7 @@ description: Access minimal authentication data for managing sessions and data f
 
 # `auth()`
 
-The `auth()` helper returns the [`Authentication`][auth-object] object of the currently active user. This is the same [`Authentication`][auth-object] object that is returned by the [`getAuth()`](/docs/references/nextjs/get-auth) hook. However, it can be used in Server Components, Route Handlers, and Server Actions.
+The `auth()` helper returns the [`Authentication`](/docs/references/nextjs/authentication-object) object of the currently active user. This is the same `Authentication` object that is returned by the [`getAuth()`](/docs/references/nextjs/get-auth) hook. However, it can be used in Server Components, Route Handlers, and Server Actions.
 
 The `auth()` helper does require [Middleware](/docs/references/nextjs/auth-middleware). 
 
