--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -12,7 +12,8 @@ The `authMiddleware()` helper integrates Clerk authentication into your Next.js 
 Create a `middleware.ts` file. If your application uses the `src/` directory, your `middleware.ts` file should be placed inside the `src/` folder. If you are not using a `src/` directory, place the `middleware.ts` file in your root directory.
 
 <Callout type="info">
-  For more information about middleware in Next.js, see the [Next.js documentation](https://nextjs.org/docs/pages/building-your-application/routing/middleware).
+  For more information about middleware in Next.js, see the [Next.js
+  documentation](https://nextjs.org/docs/pages/building-your-application/routing/middleware).
 </Callout>
 
 ```ts filename="middleware.ts"
@@ -21,7 +22,7 @@ import { authMiddleware } from "@clerk/nextjs";
 export default authMiddleware();
 
 export const config = {
-  matcher: ['/((?!.+\\.[\\w]+$|_next).*)', '/', '/(api|trpc)(.*)'],
+  matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
 };
 ```
 
@@ -51,9 +52,8 @@ export default authMiddleware({
 });
 
 export const config = {
-  matcher: ['/((?!.+\\.[\\w]+$|_next).*)', '/', '/(api|trpc)(.*)'],
+  matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
 };
-
 ```
 
 ```bash filename=".env.local"
@@ -62,6 +62,7 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 ```
+
 </CodeBlockTabs>
 
 ### Use `afterAuth()` for fine-grained control
@@ -69,7 +70,7 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 Some developers will need to handle specific cases such as handling redirects differently or detecting if a user is inside an organization. These cases can be handled with `afterAuth()`.
 
 ```ts filename="middleware.ts"
-import { authMiddleware, redirectToSignIn } from '@clerk/nextjs';
+import { authMiddleware, redirectToSignIn } from "@clerk/nextjs";
 
 export default authMiddleware({
   afterAuth(auth, req, evt) {
@@ -78,50 +79,60 @@ export default authMiddleware({
       return redirectToSignIn({ returnBackUrl: req.url });
     }
     // Redirect logged in users to organization selection page if they are not active in an organization
-    if(auth.userId && !auth.orgId && req.nextUrl.pathname !== "/org-selection"){
-      const orgSelection = new URL('/org-selection', req.url)
-      return NextResponse.redirect(orgSelection)
+    if (
+      auth.userId &&
+      !auth.orgId &&
+      req.nextUrl.pathname !== "/org-selection"
+    ) {
+      const orgSelection = new URL("/org-selection", req.url);
+      return NextResponse.redirect(orgSelection);
     }
     // If the user is logged in and trying to access a protected route, allow them to access route
     if (auth.userId && !auth.isPublicRoute) {
-      return NextResponse.next()
+      return NextResponse.next();
     }
     // Allow users visiting public routes to access them
     return NextResponse.next();
-  }
+  },
 });
 ```
 
 #### Understanding `afterAuth` configuration
 
-When using `afterAuth`, the checks must handle all cases — a custom `afterAuth` completely overrides the default behavior covered earlier, aside from adding sign-in and sign-up to `publicRoutes`. `afterAuth` does not allow you to add just one check and rely on the default behavior otherwise. 
+When using `afterAuth`, the checks must handle all cases — a custom `afterAuth` completely overrides the default behavior covered earlier, aside from adding sign-in and sign-up to `publicRoutes`. `afterAuth` does not allow you to add just one check and rely on the default behavior otherwise.
 
 Looking at the example immediately above, the following is happening:
 
 1. Redirect all users who are not logged in but who are visiting a protected page to the sign-in route.
-```ts 
+
+```ts
 if (!auth.userId && !auth.isPublicRoute) {
   return redirectToSignIn({ returnBackUrl: req.url });
 }
 ```
+
 2. If the user is signed in but is not currently active in an organization and is not visiting the route for selecting an organization, then redirect them to the organization selector. This will force users to select and be active in an organization to visit other parts of the site.
-```ts 
-if(auth.userId && !auth.orgId && req.nextUrl.pathname !== "/org-selection"){
-  const orgSelection = new URL('/org-selection', req.url)
-  return NextResponse.redirect(orgSelection)
+
+```ts
+if (auth.userId && !auth.orgId && req.nextUrl.pathname !== "/org-selection") {
+  const orgSelection = new URL("/org-selection", req.url);
+  return NextResponse.redirect(orgSelection);
 }
-```
-3. If the user is signed in and accessing a protected route, allow them to access it.
-```ts 
- if (auth.userId && !auth.isPublicRoute) {
-  return NextResponse.next()
-}
-```
-4. If none of the above match, then the user is visiting a public route. Allow them to. Don't check if they are logged in -- it doesn't matter.
-```ts 
-return NextResponse.next();
 ```
 
+3. If the user is signed in and accessing a protected route, allow them to access it.
+
+```ts
+if (auth.userId && !auth.isPublicRoute) {
+  return NextResponse.next();
+}
+```
+
+4. If none of the above match, then the user is visiting a public route. Allow them to. Don't check if they are logged in -- it doesn't matter.
+
+```ts
+return NextResponse.next();
+```
 
 ### Use `beforeAuth()` to execute middleware before authentication
 
@@ -149,7 +160,7 @@ export default authMiddleware({
 });
 
 export const config = {
-  matcher: ['/((?!.+\\.[\\w]+$|_next).*)', '/', '/(api|trpc)(.*)'],
+  matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
 };
 ```
 
@@ -161,11 +172,11 @@ By default, Clerk's `authMiddleware()` treats all routes as private if the middl
 import { authMiddleware } from "@clerk/nextjs";
 export default authMiddleware({
   // "/" will be accessible to all users
-  publicRoutes: ["/"]
+  publicRoutes: ["/"],
 });
 
 export const config = {
-      matcher: ['/((?!.+\\.[\\w]+$|_next).*)', '/', '/(api|trpc)(.*)'],
+  matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
 };
 ```
 
@@ -175,28 +186,27 @@ Use the `req` object to match against urls. The following example makes all rout
 import { authMiddleware } from "@clerk/nextjs";
 
 export default authMiddleware({
-  publicRoutes: req => !req.url.includes('/dashboard')
-})
+  publicRoutes: (req) => !req.url.includes("/dashboard"),
+});
 
 export const config = {
-  matcher: ['/((?!.+\\.[\\w]+$|_next).*)', '/', '/(api|trpc)(.*)'],
+  matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
 };
 ```
 
-You can also use regex to match routes. The following is an example of a negative assertion that makes *only* the `/admin` route protected.
+You can also use regex to match routes. The following is an example of a negative assertion that makes _only_ the `/admin` route protected.
 
 ```ts filename="middleware.ts" {4}
 import { authMiddleware } from "@clerk/nextjs";
 
 export default authMiddleware({
-  publicRoutes:['((?!^/admin/).*)']
-})
+  publicRoutes: ["((?!^/admin/).*)"],
+});
 
 export const config = {
-  matcher: ['/((?!.+\\.[\\w]+$|_next).*)', '/', '/(api|trpc)(.*)'],
+  matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
 };
 ```
-
 
 If you are building your own sign in pages, you don't need to add these pages to your `publicRoutes`. They will be inferred from your `.env` file:
 
@@ -208,14 +218,14 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 ```
 
 ### Execution order of `beforeAuth`, `publicRoutes`, and `afterAuth`
-  
+
 If you define an `afterAuth` function, it will run even if the request corresponds to a private route and no user is signed in. If you don’t define an `afterAuth` function, a redirect response to the `signInUrl` will be returned automatically. This diagram explains how and when the two handlers are invoked in the runtime.
 
 ![Execution order of `beforeAuth`, `publicRoutes`, and `afterAuth`](/docs/images/nextjs/middleware-flow-chart.png)
 
 ## Debug your middleware
 
-If you are having issues getting your Middleware dialed in, or are trying to narrow down auth-related issues, you can use the debugging feature in `authMiddlware`. Add `debug: true` to `authMiddlware` and you will get debug logs in your terminal. 
+If you are having issues getting your Middleware dialed in, or are trying to narrow down auth-related issues, you can use the debugging feature in `authMiddlware`. Add `debug: true` to `authMiddlware` and you will get debug logs in your terminal.
 
 ```ts filename="middleware.ts" {4}
 import { authMiddleware } from "@clerk/nextjs";
@@ -233,27 +243,27 @@ export const config = {
 
 The `authMiddleware()` method accepts an optional object. The following options are available:
 
-| Name | Type | Description |
-| --- | --- | --- |
-| `afterAuth?` | `function` | Called after the authentication middleware is executed. This function has access to the [`Authentication`](/docs/references/nextjs/authentication-object) object and can be used to execute logic based on the auth state. |
-| `apiRoutes?` | `string[]` | A list of routes that should return 401 if the user is not logged in. You can use glob patterns to match multiple routes or a function to match against the request object. For example: `['/foo', '/bar(.*)']` or [/^\/foo\/.*$/] |
-| `audience?` | `string \| string[]` | A string or list of audiences. |
-| `audience?` | `string \| string[]` | A string or list of [audiences](https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.3). If passed, it is checked against the `aud` claim in the token. |
-| `authorizedParties?` | `string[]` | An allowlist of origins to verify against, to protect your application from the subdomain cookie leaking attack.<br/>For example:<br/>`['http://localhost:3000', 'https://example.com']`<br/>For more information, refer to the [reference guide](/docs/references/nodejs/token-verification#validate-the-authorized-party-of-a-session-token). |
-| `beforeAuth?` | `function` | A function called before the authentication middleware is executed. If a redirect response is returned, the middleware will respect it and redirect the user. If `false` is returned, the auth middleware will not execute and the request will be handled as if the auth middleware was not present. |
-| `clockSkewInSeconds? (deprecated)` | `number` | Deprecated in favor of `clockSkewInMs`. |
-| `clockSkewInMs?` | `number` | Specifies the allowed time difference (in milliseconds) between the Clerk server (which generates the token) and the clock of the user's application server when validating a token. Defaults to 5000 ms (5 seconds). |
-| `debug?` | `boolean` | Enables debugging mode in the Clerk middleware handler. Logs out additional debugging information. |
-| `domain?` | `string` | The domain used for satellites to inform Clerk where this application is deployed. |
-| `isSatellite?` | `boolean` | When using Clerk's satellite feature, this should be enabled for secondary domains. |
-| `proxyUrl?` | `string` | If using a proxy, specify the URL of the proxy. |
-| `jwksCacheTtlInMs?` | `number` | Set the JWKs cache TTL, in milliseconds. |
-| `jwtKey?` | `string` | An optional [custom JWT key](/docs/references/nodejs/token-verification#networkless-token-verification-using-the-jwt-verification-key) to use for session token validation. |
-| `ignoredRoutes?` | `string[]` | A list of routes that should be ignored by the middleware. This list typically includes routes for static files or Next.js internals. For improved performance, these routes should be skipped using the default config.matcher instead. |
-| `publicRoutes?` | `string[]` | A list of routes that should be accessible without authentication. You can use glob patterns to match multiple routes or a function to match against the request object. For example: `['/foo', '/bar(.*)']` or [/^\/foo\/.*$/]<br/>The sign in and sign up URLs are included by default, unless a function is provided. |
-| `publishableKey?` | `string` | An alternate Clerk publishable key. |
-| `secretKey?` | `string` | An alternate Clerk secret key. |
-| `signInUrl?` | `string` | An alternative sign in URL. |
-| `skipJwksCache?` | `boolean` | Disables use of the JWKs cache. |
-| `apiKey?` | `string` | An alternate Clerk API key. |
-| `frontendApi?` | `string` | An alternate Clerk frontend API URL. |
+| Name                               | Type                 | Description                                                                                                                                                                                                                                                                                                                                     |
+| ---------------------------------- | -------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `afterAuth?`                       | `function`           | Called after the authentication middleware is executed. This function has access to the [`Authentication`](/docs/references/nextjs/authentication-object) object and can be used to execute logic based on the auth state.                                                                                                                      |
+| `apiRoutes?`                       | `string[]`           | A list of routes that should return 401 if the user is not logged in. You can use glob patterns to match multiple routes or a function to match against the request object. For example: `['/foo', '/bar(.*)']` or `[/^\/foo\/.*$/]`                                                                                                            |
+| `audience?`                        | `string \| string[]` | A string or list of audiences.                                                                                                                                                                                                                                                                                                                  |
+| `audience?`                        | `string \| string[]` | A string or list of [audiences](https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.3). If passed, it is checked against the `aud` claim in the token.                                                                                                                                                                                    |
+| `authorizedParties?`               | `string[]`           | An allowlist of origins to verify against, to protect your application from the subdomain cookie leaking attack.<br/>For example:<br/>`['http://localhost:3000', 'https://example.com']`<br/>For more information, refer to the [reference guide](/docs/references/nodejs/token-verification#validate-the-authorized-party-of-a-session-token). |
+| `beforeAuth?`                      | `function`           | A function called before the authentication middleware is executed. If a redirect response is returned, the middleware will respect it and redirect the user. If `false` is returned, the auth middleware will not execute and the request will be handled as if the auth middleware was not present.                                           |
+| `clockSkewInSeconds? (deprecated)` | `number`             | Deprecated in favor of `clockSkewInMs`.                                                                                                                                                                                                                                                                                                         |
+| `clockSkewInMs?`                   | `number`             | Specifies the allowed time difference (in milliseconds) between the Clerk server (which generates the token) and the clock of the user's application server when validating a token. Defaults to 5000 ms (5 seconds).                                                                                                                           |
+| `debug?`                           | `boolean`            | Enables debugging mode in the Clerk middleware handler. Logs out additional debugging information.                                                                                                                                                                                                                                              |
+| `domain?`                          | `string`             | The domain used for satellites to inform Clerk where this application is deployed.                                                                                                                                                                                                                                                              |
+| `isSatellite?`                     | `boolean`            | When using Clerk's satellite feature, this should be enabled for secondary domains.                                                                                                                                                                                                                                                             |
+| `proxyUrl?`                        | `string`             | If using a proxy, specify the URL of the proxy.                                                                                                                                                                                                                                                                                                 |
+| `jwksCacheTtlInMs?`                | `number`             | Set the JWKs cache TTL, in milliseconds.                                                                                                                                                                                                                                                                                                        |
+| `jwtKey?`                          | `string`             | An optional [custom JWT key](/docs/references/nodejs/token-verification#networkless-token-verification-using-the-jwt-verification-key) to use for session token validation.                                                                                                                                                                     |
+| `ignoredRoutes?`                   | `string[]`           | A list of routes that should be ignored by the middleware. This list typically includes routes for static files or Next.js internals. For improved performance, these routes should be skipped using the default config.matcher instead.                                                                                                        |
+| `publicRoutes?`                    | `string[]`           | A list of routes that should be accessible without authentication. You can use glob patterns to match multiple routes or a function to match against the request object. For example: `['/foo', '/bar(.*)']` or `[/^\/foo\/.*$/]`<br/>The sign in and sign up URLs are included by default, unless a function is provided.                      |
+| `publishableKey?`                  | `string`             | An alternate Clerk publishable key.                                                                                                                                                                                                                                                                                                             |
+| `secretKey?`                       | `string`             | An alternate Clerk secret key.                                                                                                                                                                                                                                                                                                                  |
+| `signInUrl?`                       | `string`             | An alternative sign in URL.                                                                                                                                                                                                                                                                                                                     |
+| `skipJwksCache?`                   | `boolean`            | Disables use of the JWKs cache.                                                                                                                                                                                                                                                                                                                 |
+| `apiKey?`                          | `string`             | An alternate Clerk API key.                                                                                                                                                                                                                                                                                                                     |
+| `frontendApi?`                     | `string`             | An alternate Clerk frontend API URL.                                                                                                                                                                                                                                                                                                            |
